# command-macros

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  search-index.js
command-macros/: Cargo.toml  README.md
command-macros-plugin/: Cargo.toml  README.md
command-macros-plugin/src/: lib.rs  syntax.rs
command-macros-plugin/tests/: lib.rs
command-macros/src/: lib.rs
command-macros/tests/: reexport.rs
command_macros/: fn.plugin_registrar.html  index.html  macro.cmd!.html  macro.command!.html  sidebar-items.js
src/: lib.rs  plugin.rs
src/command_macros/src/: lib.rs.html  plugin.rs.html
tests/: lib.rs
