[package]
name = "command-macros"
version = "0.1.3"
authors = ["Michał Krasnoborski <mkrdln@gmail.com>"]

description = "Macros for creating std::process::Command with shell-like syntax"

documentation = "http://krdln.github.io/command-macros/command_macros/index.html"
homepage = "https://github.com/krdln/command-macros"
repository = "https://github.com/krdln/command-macros"
readme = "README.md"
keywords = ["command", "macro", "shell", "process", "dsl"]
license = "MIT"

[lib]
crate-type = ["dylib"]

[features]
nightly = []

[dependencies]

