[package]
name = "command-macros-plugin"
version = "0.2.0"
authors = ["Michał Krasnoborski <mkrdln@gmail.com>"]

description = "Implementation crate for command-macros"

documentation = "https://docs.rs/command-macros-plugin/0.2.0/command_macros_plugin/"
repository = "https://github.com/krdln/command-macros"
readme = "README.md"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
itertools = "0.7.8"
