[package]
name = "command-macros-plugin"
version = "0.2.3"
authors = ["Michał Krasnoborski <mkrdln@gmail.com>"]

description = "Implementation crate for command-macros"

repository = "https://github.com/krdln/command-macros"
readme = "README.md"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
itertools = "0.7.8"
